# fse-trabalho-3-2023-1

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.ci
main/: CMakeLists.txt  Kconfig.projbuild  adc_module.c  encoder.c  encoder.h  gpio.c  gpio.h  hello_world_main.c  led.c  led.h  mqtt.c  mqtt.h  rotary.c  rotary.h
