idf_component_register(SRCS "hello_world_main.c"
                            "adc_module.c" 
                            "encoder.c"
                            "led.c"
                            "mqtt.c"
                            "wifi.c"
                            "gpio.c"
                    INCLUDE_DIRS ".")
